--- a/index.html
+++ b/index.html
@@ -53,24 +53,8 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
       </div>
     </div>
   </div>
-<!-- GetButton.io widget -->
-<script type="text/javascript">
-  (function () {
-      var options = {
-          whatsapp: "+919752615475", // WhatsApp number
-          sms: "+919752615475", // Sms phone number
-          call_to_action: "Massage us ", // Call to action
-          button_color: "#A8CE50", // Color of button
-          position: "right", // Position may be 'right' or 'left'
-          order: "whatsapp,sms", // Order of buttons
-      };
-      var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
-      var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
-      s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
-      var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-  })();
-</script>
-<!-- /GetButton.io widget -->
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
