--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
   </div>
 
   <script src="js/main.js"></script>
+  <!-- GetButton.io widget -->
+<script type="text/javascript">
+(function () {
+var options = {
+whatsapp: "+919752615475", // WhatsApp number
+sms: "+919752615475", // Sms phone number
+call_to_action: "Message us", // Call to action
+button_color: "#FF6550", // Color of button
+position: "right", // Position may be 'right' or 'left'
+order: "whatsapp,sms", // Order of buttons
+};
+var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+})();
+</script>
+<!-- /GetButton.io widget -->
+
 </body>
 
 </html>
